style.css
p, h1, h2, h3, h4, h5, h6
{
	font-family: "arial";
	color: black;
}

body
{
	margin: 1px 1px 1px 1px;
	background-image: url("assign1/imgs/bgimg.jpg");
	background-repeat: repeat;
}

hr
{
	color: green;
}

ul
{
	list-style-type: square;
	list-style-position: inside;
}

a:hover
{
	font-family: "arial";
	color: #126eaf;
	text-shadow: 2px 2px 8px black;
}

a:link, a:visited, a:active
{
	color: blue;
}

.center
{
	margin-left: 20%;
	width: 60%;
}
.left
{
	margin-top: 2%;
	margin-left: 5%;
	padding-top: 10px;
	padding-bottom: 10px;
	line-height: 25px;
	float: left;
	position: absolute;
	
	border-top: 3px dotted #e5e5e5;
	border-bottom: 3px dotted #e5e5e5;
	box-shadow: inset 0 -1px 0 0 #e5e5e5, inset 0 1px 0 0 #e5e5e5, 0 1px 0 0 #e5e5e5, 0 -1px 0 0 #e5e5e5;
}
.left a
{
	font-weight: bold;
	text-transform: uppercase;
}
.sub-left
{
	width: 50%;
	float: left;
}
.sub-right
{
	width: 50%;
	float: right;
}
.self
{
	margin-left: 10px;
	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	width: 171.35px;
	height: 316.4px;
	border-radius: 150px;
}

